Initial scala 3 support (scala2.13 rewrite options) Semver propagation and Class generation. Gradle 7.0 -> 7.3 Scala 2.12.x -> 2.13.7 + source 3 Java JDK 11 Graalvm Add: Incubating Monix / Quill / Vert.x Integration / HazelCast